fix: text-align

--- a/src/styles/pages/about.module.scss
+++ b/src/styles/pages/about.module.scss
@@ -1,7 +1,7 @@
 .about {
   article {
     .cards-subcontent {
-      text-align: center;
+      text-align: start;
       display: block;
       .about-link {
         color: $supplementaryFontColor;
